[package]
name = "keymaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
clap = { version = "4.5.4", features = [ "derive" ] }
hyper = { version = "1", features = ["full"] }
hyper-tls = "0.6.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = [ "full" ] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json"] }
cookie = "0.18"
jwt-simple = "0.12.9"